--- a/index.html
+++ b/index.html
@@ -1016,9 +1016,9 @@
      <nav>
        <ul class="global-nav">
          <li><a href="page1/page1.html">本サイト</a></li>
-         <li><a href="page1/page2/page2.html">タイムライン</a></li>
+         <li><a href="page2/page2.html">タイムライン</a></li>
          <li><a href="uwatu2/page3-2.html">地域タイムライン</a></li>
-         <li><a href="page1/page2/page3/page3-2.html">マイタイムライン</a></li>
+         <li><a href="page3/page3-2.html">マイタイムライン</a></li>
        </ul>
      </nav>
    </header>
